added countdown box

--- a/index.html
+++ b/index.html
@@ -18,16 +18,44 @@
                 <div class="col-6 ms-5 mt-5">
                     <div class="text-warning fw-bold h5 mt-5 moto">MALO MESTO, VELIKO SRCE.</div>
                     <div class="fw-bold display-1 title text-white">NOGOMETNI KLUB ROGAŠKA</div>
-                    <div class="mt-4 w-75 text-light opacity-75 font-poppins">Nogometni klub Rogaška s svojimi nogometaši nastopa v tekmovanjih vseh selekcij, člansko moštvo pa se letos meri v prvoligaški druščini.
+                    <div class="mt-4 w-75 text-light opacity-75 font-poppins">Nogometni klub Rogaška s svojimi nogometaši nastopa v tekmovanjih vseh selekcij, člansko moštvo pa se letos meri v prvoligaški druščini.</div>
                 </div>
                 <div class="col-6"></div>
             </div>
             <div class="row">
                 <div class="col-6"></div>
                 <div class="col-6">
-                    <div class="h3 text-warning">Nalsednja Tekma</div>
+                    <divcontainer class="row ms-5 me-5 ps-4 countdown-box">
+                        <div class="col-4 h5 text-warning fw-bold py-4 next-game moto">Nalsednja tekma</div>
+                        <span class="col-1 dot-line text-light"></span>
+                        <div class="col-6 display-5 fw-bold text-light py-4">
+                            <div class="container">
+                                    <div class="row">
+                                    <div class="col-3">
+                                        <span class="row">03
+                                            <small class="row countdown fw-normal">Dni</small>
+                                        </span>
+                                    </div>
+                                    <div class="col-3">
+                                        <span class="row">19
+                                            <small class="row countdown fw-normal">Ur</small>
+                                        </span>
+                                    </div>
+                                    <div class="col-3">
+                                        <span class="row">22
+                                            <small class="row countdown fw-normal">Minut</small>
+                                        </span>
+                                    </div>
+                                    <div class="col-3">
+                                        <span class="row">23
+                                            <small class="row countdown fw-normal">Sekund</small>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                
             </div>
 
         </div>
