--- a/index.html
+++ b/index.html
@@ -57,11 +57,53 @@
                     </div>
                 </div>
             </div>
-
         </div>
-
+    </section>
+    <section id="results">
+        <div class="m-5 d-inline-flex">
+            <div class="row">
+                <div class="col mb-5">
+                    <div class="container">
+                        <div class="row result-box shadow-sm">
+                            <span class="text-center" ">3. marec 2024</span>
+                            <img class="col-4 h-25 rounded float-left team-logo" src="./assets/Celje-400x400.png" alt="N/A">
+                            <div class="col-4">
+                                <p class="h1 fw-bold text-center align-middle">1 - 0</p>
+                            </div>
+                            <img class="col-4 h-25 rounded float-right " src="./assets/black_nk_rogaska_grb.png" alt="N/A">
+                            <span class="text-center">Prva liga Telemach</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-5 ">
+                    <div class="container">
+                        <div class="row result-box shadow-sm ">
+                            <span class="text-center" ">3. marec 2024</span>
+                            <img class="col-4 h-25 rounded float-left team-logo" src="./assets/Celje-400x400.png" alt="N/A">
+                            <div class="col-4">
+                                <p class="h1 fw-bold text-center align-middle">1 - 0</p>
+                            </div>
+                            <img class="col-4 h-25 rounded float-right " src="./assets/black_nk_rogaska_grb.png" alt="N/A">
+                            <span class="text-center">Prva liga Telemach</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-5 ">
+                    <div class="container">
+                        <div class="row result-box shadow-sm ">
+                            <span class="text-center" ">3. marec 2024</span>
+                            <img class="col-4 h-25 rounded float-left team-logo" src="./assets/Celje-400x400.png" alt="N/A">
+                            <div class="col-4">
+                                <p class="h1 fw-bold text-center align-middle">1 - 0</p>
+                            </div>
+                            <img class="col-4 h-25 rounded float-right " src="./assets/black_nk_rogaska_grb.png" alt="N/A">
+                            <span class="text-center">Prva liga Telemach</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
 </body>
 </html>
