--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     <section id="results">
         <div class="m-5 d-inline-flex">
             <div class="row">
-                <div class="col mb-5">
+                <div class="col">
                     <div class="container">
-                        <div class="row result-box shadow-sm">
+                        <div class="row result-box shadow-sm p-3">
                             <span class="text-center" ">3. marec 2024</span>
                             <img class="col-4 h-25 rounded float-left team-logo" src="./assets/Celje-400x400.png" alt="N/A">
                             <div class="col-4">
@@ -75,9 +75,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col mb-5 ">
+                <div class="col">
                     <div class="container">
-                        <div class="row result-box shadow-sm ">
+                        <div class="row result-box shadow-sm p-3">
                             <span class="text-center" ">3. marec 2024</span>
                             <img class="col-4 h-25 rounded float-left team-logo" src="./assets/Celje-400x400.png" alt="N/A">
                             <div class="col-4">
@@ -88,9 +88,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col mb-5 ">
+                <div class="col" style="padding-right:0px">
                     <div class="container">
-                        <div class="row result-box shadow-sm ">
+                        <div class="row result-box shadow-sm p-3">
                             <span class="text-center" ">3. marec 2024</span>
                             <img class="col-4 h-25 rounded float-left team-logo" src="./assets/Celje-400x400.png" alt="N/A">
                             <div class="col-4">
@@ -101,7 +101,11 @@
                         </div>
                     </div>
                 </div>
-            </div>
+                <div class="col-2" style="padding-left:0px">
+                    <p class="h3" style="color: #fbb040;">REZULTATI</p>
+                    <P class="h1 fw-bold">ZADNJIH TEKEM</P>
+                    <P class="" style="color: #b6b8bc">Malo mesto, veliko srce</P>
+                </div>
         </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
