--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script defer src="./script.js"></script>
     <title>Digital Partner</title>
 </head>
 <body>
@@ -26,30 +27,30 @@
                 <div class="col-6"></div>
                 <div class="col-6">
                     <divcontainer class="row ms-5 me-5 ps-4 countdown-box">
-                        <div class="col-4 h5 text-warning fw-bold py-4 next-game moto">Nalsednja tekma</div>
+                        <div class="col-4 h5 text-warning fw-bold py-4 next-game moto">Naslednja tekma</div>
                         <span class="col-1 dot-line text-light"></span>
                         <div class="col-6 display-5 fw-bold text-light py-4">
-                            <div class="container">
+                            <div id="countdown" class="container">
                                     <div class="row">
                                     <div class="col-3">
-                                        <span class="row">03
-                                            <small class="row countdown fw-normal">Dni</small>
+                                        <span id="days" class="row">
                                         </span>
+                                        <small class="row countdown fw-normal">Dni</small>
                                     </div>
                                     <div class="col-3">
-                                        <span class="row">19
-                                            <small class="row countdown fw-normal">Ur</small>
+                                        <span id="hours" class="row">
                                         </span>
+                                        <small class="row countdown fw-normal">Ur</small>
                                     </div>
                                     <div class="col-3">
-                                        <span class="row">22
-                                            <small class="row countdown fw-normal">Minut</small>
+                                        <span id="minutes" class="row">
                                         </span>
+                                        <small class="row countdown fw-normal">Minut</small>
                                     </div>
                                     <div class="col-3">
-                                        <span class="row">23
-                                            <small class="row countdown fw-normal">Sekund</small>
+                                        <span id="seconds" class="row">
                                         </span>
+                                        <small class="row countdown fw-normal">Sekund</small>
                                     </div>
                                 </div>
                             </div>
@@ -108,6 +109,9 @@
                 </div>
         </div>
     </section>
+    <div id="countdown">Countdown to April 1, 2024: <span id="timer"></span></div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </body>
 </html>
